force-app/main/default/objects/NHS_Project_Plan_Task__c/NHS_Project_Plan_Task__c.object-meta.xml
<CustomObject>
    <description>Tasks within an NHS Project Plan</description>
    <label>NHS Project Task</label>
    <nameField>
        <label>Task Number</label>
        <type>AutoNumber</type>
        <displayFormat>TSK-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>NHS Project Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>