force-app/main/default/objects/NHS_Project_Plan_Task__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Task category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
                <default>true</default>
                <label>Feature</label>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>UX Improvement</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>