force-app/main/default/objects/NHS_Project_Plan_Task__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Task field</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>