force-app/main/default/objects/NHS_Project_Plan_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Task field</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>