force-app/main/default/objects/NHS_Project_Plan_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Task field</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>