force-app/main/default/objects/NHS_Project_Plan_Task__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Task field</description>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>