force-app/main/default/objects/NHS_Project_Plan_Task__c/fields/Project_Plan__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan__c</fullName>
    <label>Project Plan</label>
    <referenceTo>NHS_Project_Plan__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>MasterDetail</type>
    <reparentableMasterDetail>true</reparentableMasterDetail>
</CustomField>