force-app/main/default/objects/NHS_Project_Plan_Task__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Task field</description>
    <label>Sort Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>